# django-comments-xtd

./: .babelrc  .coveragerc  .editorconfig  .eslintignore  .eslintrc  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .stylelintrc.json  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  TODO.md  conftest.py  cypress.config.js  eslint.config.mjs  gruntfile.cjs  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements  requirements-dev.txt  requirements-tests.txt  requirements.pip  requirements.txt  requirements_tests.pip  rollup.config.js  runtests.py  setup.py  (+3 more)
.github/workflows/: ci-pipeline.yml  publish.yml  upload-pypi.yml
demo/: package.json  requirements-frozen.txt  requirements.txt  webpack.config.js
demo/fixtures/: comments.json  quotes.json  stories.json  users.json
demo/project/: install.sh  manage.py
demo/project/project/: asgi.py  enums.py  iso_639_1.py  settings.py  settings_dev.py  urls.py  views.py  wsgi.py
demo/project/quotes/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
demo/project/stories/: apps.py  models.py  urls.py  views.py
demo/project/templates/: base.html  homepage.html
demo/project/users/: decorators.py  forms.py  models.py  views.py
demos/: README  democx.tgz
demos/custom_comments/: install.sh  manage.py  settings.py  urls.py
demos/custom_comments/articles/: admin.py  urls.py
demos/custom_comments/fixtures/: django_comments.json
demos/custom_comments/mycomments/: models.py
demos/multiple/: dump.sh  install.sh  manage.py  settings.py
demos/multiple/blog/: admin.py  views.py
demos/multiple/fixtures/: auth.json  django_comments_xtd.json  projects.json  sites.json
demos/multiple/projects/: models.py  urls.py
demos/multiple/templates/: homepage.html
demos/project-quotes/: Dockerfile  MANIFEST.in  README.md  docker-compose.yml  nginx.conf  requirements-docker.txt  requirements.txt  setup.py
demos/project-quotes/fixtures/: comments.json  sites.json  users.json
demos/project-stories/: LICENSE  README.md  requirements.txt
demos/simple/: settings.py
demos/simple/articles/: urls.py
demos/simple_threads/: manage.py  urls.py
django_comments_xtd/: __init__.py  admin.py  api.py  apps.py  compat.py  forms.py  models.py  moderation.py  paginator.py  serializers.py  signals.py  signed.py  templating.py  urls.py  utils.py  views.py  views_v2.py
django_comments_xtd/api/: __init__.py  frontend.py  permissions.py  serializers.py  urls.py  views.py
django_comments_xtd/conf/: __init__.py  defaults.py
django_comments_xtd/demo/: initial_data.json  manage.py  settings.py  urls.py  views.py
django_comments_xtd/demos/: README
django_comments_xtd/migrations/: 0001_initial.py  0002_auto__add_field_xtdcomment_thread__add_field_xtdcomment_parent__add_fi.py  0002_blacklisteddomain.py  0003_auto_20170220_1333.py  0003_threads.py  0004_auto_20170221_1510.py  0005_auto_20170920_1247.py  0006_auto_20181204_0948.py  0007_xtdcomment_nested_count.py  0008_auto_20200920_2037.py  0009_auto_20220111_1628.py  0009_commentreaction.py  0009_commentthread_remove_xtdcomment_thread_id_and_more.py
django_comments_xtd/templates/: 404.html
django_comments_xtd/templatetags/: comments_xtd.py
django_comments_xtd/tests/: __init__.py  apiauth.py  apps.py  conftest.py  forms.py  models.py  pytest_fixtures.py  settings.py  templatetags.py  test_api_views.py  test_cmd_initialize_nested_count.py  test_cmd_populate_xtdcomments.py  test_forms.py  test_frontend.py  test_get_version.py  test_init.py  test_models.py  test_moderation.py  test_paginator.py  test_reactions.py  test_serializers.py  test_signed.py  test_templates.py  test_templatetags.py  test_utils.py  test_views.py  urls.py  urls_alt.py  utils.py  views.py
docs/: Makefile  conf.py  example.rst  extending.rst  extensions.py  i18n.rst  index.rst  javascript.rst  logic.rst  make.bat  management.rst  migrating.rst  quickstart.rst  release-notes.md  requirements.txt  settings.rst  templates.rst  templatetags.rst  tutorial.rst  usecases.rst  webapi.rst
docs/static/: custom.css
docs/usecases/: change-user-image-or-avatar.rst  only-signed-in-can-comment.rst
e2e_project/: manage.py  middleware.py  runserver.pid  settings.py  start_server.sh  urls.py
e2e_project/django_cypress/: __init__.py  apps.py  urls.py  views.py
e2e_project/fixtures/: prose.json
e2e_project/prose/: apps.py
e2e_project/templates/: base.html  form_js_test.html  homepage.html  moderated_js_test.html  posted_js_test.html
example/: README  README.md
example/comp/: README.md  context_processors.py  enums.py  manage.py  requirements.txt  settings.py  urls.py  views.py  wsgi.py
example/custom/: README.md  install.sh  manage.py  requirements.txt  settings.py  urls.py  views.py
example/fixtures/: articles.json  auth.json  quotes.json
example/i18n/: README.md  install.sh  manage.py  requirements.pip  settings.py  urls.py
example/mockups_project/: enums.py  manage.py  middleware.py  requirements.txt  settings.py  urls.py  views.py
example/project/: install.sh  manage.py  settings.py  urls.py
example/quotes_project/: manage.py  requirements.txt  settings.py  urls.py  views.py  wsgi.py
example/simple/: README.md  dump.sh  install.sh  manage.py  requirements.txt  settings.py  urls.py  views.py
example/threads/: manage.py  settings.py  urls.py
js/: banner.js  rollup.config.js  rollup.config.mjs
js/src/: comment_form.js  comment_threads.js  commenting.js  flagging.js  index.js  reacting.js  reaction_handler.js  reactions_panel.js  reply_forms.js  utils.js  vote_handler.js  voting.js
js/tests/: README.md  comment_form.mocha.spec.mjs  manage.py  requirements.txt  settings.py  start_server.sh  stop_server.sh  urls.py  utils.mjs  views.py
js_tests/: fetch-setup.js  global-setup.js  global-teardown.js  serve_static.js
scss/: _base.scss  _layout.scss  _layout2.scss  _root.scss  _utilities.scss  djcx-styles.scss
tests/: runtests.py  settings.py
(+785 files in other folders)
