[build-system]
requires = ["setuptools>=60.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
exclude = "django_comments_xtd/migrations"

[tool.ufmt]
excludes = [
    "django_comments_xtd/migrations"
]

[tool.usort]
profile = 'black'
line_length = 80
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango41Warning",
    "ignore::django.utils.deprecation.RemovedInDjango50Warning"
]

[tool.pytest]
addopts = "--create-db"
django_find_project = false
python_files = "test_*.py"
