[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
authors = [
    {name = "Daniela Rus Morales", email = "danirus@eml.cc"}
]
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Environment :: Web Environment',
        'Intended Audience :: Developers',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Framework :: Django',
        'Natural Language :: English',
        'Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary',
]
dependencies = [
    "Django >=4, <6",
    'django-contrib-comments >=2.2, <2.3',
    'djangorestframework >=3.12, <3.16',
    'docutils',
    'pytz',
    'six',
]
description = "Commenting Django app with threads, follow up notifications and email confirmation."
dynamic = ["version"]
license = "BSD-2-Clause"
name = "django-comments-xtd"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/danirus/django-comments-xtd"
Documentation = "https://django-comments.xtd.readthedocs.io"

[project.optional-dependencies]
dev = [
    "coverage >=7.6, <7.7",
    "django-coverage-plugin >=3.1, <3.2",
    "pre-commit >=4.0.1",
    "pytest >=8.3, <8.4",
    "pytest-cov >=6.0, <6.1",
    "pytest-django >=4.9, <4.10",
    "ruff >=0.11.0, <1",
    "tox >=4.25, <4.26",
]
docs = [
    "sphinx >=8, <9",
    "myst-parser >=4.0.0, <4.1",
    "sphinx-colorschemed-images >=0.2.2",
    "sphinx-copybutton >=0.5.2, <1.0.0",
    "sphinx-nefertiti >=0.8.5",
]

[tool.coverage.run]
plugins = ["django_coverage_plugin"]

[tool.coverage.report]
omit = [
    "django_comments_xtd/admin.py",
    "django_comments_xtd/migrations/*",
    "django_comments_xtd/tests/*",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "docs",
    "example",
    "node_modules",
]

[tool.setuptools.dynamic]
version = {attr = "django_comments_xtd.get_version"}

[tool.ruff]
target-version = "py310"
exclude = [
    "docs/",
    "venv/",
    "django_comments_xtd/migrations/",
    "django_comments_xtd/tests/migrations/",
    "example/**/migrations/",
]
line-length = 80

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    # "FURB",# refurb (modernising code)
    "I",   # isort
    "ICN", # flake8-import-conventions
    "N",   # pep8-naming
    "PERF",# perflint (performance anti-patterns)
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL",  # pylint
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "T20", # flake8-print
]

[tool.pytest]
addopts = "--create-db"
django_find_project = false
python_files = "test_*.py"
